# itia_dynamics

itia_dynamics/: CMakeLists.txt  package.xml
itia_dynamics_core/: CMakeLists.txt  package.xml
itia_dynamics_core/include/itia_dynamics_core/: base_component.h  cmotion_conversion.h  friction_polynomial1.h  friction_polynomial2.h  ideal_spring.h  itia_kin_solver_base.h  itia_kin_solver_eigen.h  itia_kin_solver_kdl.h  itia_kin_solver_moveit.h  itia_primitives.h  itia_spacevect_algebra.h  itia_urdf_parser.h  kdl_conversions.h  reducedregr_openkine.h  twist_wrench_conversions.h
itia_dynamics_core/src/: itia_dyn_elastic_regressor_test.cpp  itia_dyn_solver_test.cpp  itia_inertia_matrix.cpp  itia_kin_solver_test.cpp  jac_speed_test.cpp  vel_speed_test.cpp
itia_dynamics_core/src/itia_dynamics_core/: itia_algebra.cpp.deleteme  itia_kin_solver_base.cpp  itia_kin_solver_eigen.cpp  itia_kin_solver_kdl.cpp  itia_kin_solver_moveit.cpp  itia_primitives_chain.cpp  itia_primitives_joint.cpp  itia_primitives_link.cpp
